Enhance index.html with Tailwind CSS for improved styling and layout; update content structure and key features section

--- a/public/index.html
+++ b/public/index.html
@@ -6,73 +6,45 @@
     <meta name="description" content="Explore the detailed documentation for Playit Backend API. Includes user authentication, media management, playlists, comments, likes, subscriptions, and real-time updates. Perfect for developers building advanced media apps.">
     <meta name="keywords" content="Playit Backend API Documentation, Media management API Postman, User authentication API Postman, Playlist API endpoints, Real-time updates API documentation, Backend API for media apps">
     <meta name="author" content="Playit Team">
-    <title>Playit Backend API Documentation | Comprehensive Media Management API</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
-            line-height: 1.6;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-        }
-        main {
-            padding: 20px;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        h1 {
-            color: #4CAF50;
-        }
-        a {
-            color: #4CAF50;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <title>Playit Backend API Documentation | Comprehensive Media Management</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <header>
-        <h1>Playit Backend API</h1>
-        <p>Comprehensive Media Management API Documentation</p>
-    </header>
-    <main>
-        <h2>About</h2>
-        <p>Welcome to the official Playit Backend API documentation. This API is designed to provide robust backend services for media-centric applications. Explore our endpoints to integrate features like user authentication, media management, playlists, comments, likes, subscriptions, and real-time updates into your app.</p>
-        
-        <h2>Key Features</h2>
-        <ul>
-            <li><strong>User Authentication:</strong> Secure user registration and login.</li>
-            <li><strong>Media Management:</strong> Upload, fetch, and delete media files.</li>
-            <li><strong>Playlist Management:</strong> Create, update, and manage playlists.</li>
-            <li><strong>Comments and Likes:</strong> Interact with video content using comments and likes.</li>
-            <li><strong>Subscriptions:</strong> Manage user subscriptions and notifications.</li>
-            <li><strong>Real-Time Updates:</strong> WebSocket support for instant updates.</li>
-        </ul>
+<body class="bg-gray-100 text-gray-800">
 
-        <h2>Documentation</h2>
-        <p>Access the full API documentation on Postman:</p>
-        <p><a href="https://documenter.getpostman.com/view/38509418/2sAYQdiV9q" target="_blank">View API Documentation</a></p>
+    <header class="bg-green-500 text-white p-6 text-center">
+        <h1 class="text-3xl font-semibold">Playit Backend API</h1>
+        <p class="text-xl">Comprehensive Media Management API Documentation</p>
+    </header>
+
+    <main class="max-w-3xl mx-auto p-6">
+        <section class="mb-8">
+            <h2 class="text-2xl font-semibold text-green-500">About</h2>
+            <p>Welcome to the official Playit Backend API documentation. This API is designed to provide robust backend services for media-centric applications. Explore our endpoints to integrate features like user authentication, media management, playlists, comments, likes, subscriptions, and real-time updates into your app.</p>
+        </section>
+
+        <section class="mb-8">
+            <h2 class="text-2xl font-semibold text-green-500">Key Features</h2>
+            <ul class="list-disc pl-6">
+                <li><strong>User Authentication:</strong> Secure user registration and login.</li>
+                <li><strong>Media Management:</strong> Upload, fetch, and delete media files.</li>
+                <li><strong>Playlist Management:</strong> Create, update, and manage playlists.</li>
+                <li><strong>Comments and Likes:</strong> Interact with video content using comments and likes.</li>
+                <li><strong>Subscriptions:</strong> Manage user subscriptions</li>
+                <!-- <li><strong>Real-Time Updates:</strong> WebSocket support for instant updates.</li> -->
+            </ul>
+        </section>
+
+        <section>
+            <h2 class="text-2xl font-semibold text-green-500">Documentation</h2>
+            <p>Access the full API documentation on Postman:</p>
+            <p><a href="https://documenter.getpostman.com/view/38509418/2sAYQdiV9q" target="_blank" class="text-green-500 hover:underline">View API Documentation</a></p>
+        </section>
     </main>
-    <footer>
+
+    <footer class="bg-gray-800 text-white text-center py-4 mt w-full fixed bottom-0">
         <p>&copy; 2025 Playit Team. All rights reserved.</p>
     </footer>
+
 </body>
 </html>
+
